--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "axios": "^0.21.1",
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
     "moment-jalaali": "^0.9.2",
     "pretty-checkbox": "^3.0.3",
     "vue": "^2.6.11",
+    "vue-oidc-client": "^1.0.0-alpha.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
